--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
-    "next": "15.4.8",
+    "next": "^15.5.9",
     "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
